secrets.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: mypod
  # namespace: <nome-aluno>
spec:
  containers:
  - name: mypod
    image: redis
