app.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami5
  # namespace: whoami5
  labels:
    allow.http: "false"
    application: whoami5
spec:
  replicas: 3
  selector:
    matchLabels:
      application: whoami5
  template:
    metadata:
      labels:
        application: whoami5
    spec:
      serviceAccount: logs
      containers:
      - name: whoami5
        image: jwilder/whoami
        ports:
        - containerPort: 8000
        securityContext:
          privileged: true


---
apiVersion: v1
kind: Service
metadata:
  name: whoami5
  # namespace: whoami5
spec:
  type: ClusterIP
  ports:
  - port: 80 # Porta a ser exposta pelo SERVICE
    targetPort: 8000 # Porta que a aplicação está rodando no POD
  selector:
    application: whoami5


---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whoami5
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"  # Exemplo para NGINX, ajuste conforme necessário
spec:
  rules:
    - host: app.rancher.vzn.skyone.guru
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: whoami5
                port:
                  number: 80
